<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".view.editor.EditorFragment"
             android:scrollbarStyle="insideOverlay"
             android:scrollbars="vertical"
             android:fadeScrollbars="false"
             android:scrollbarAlwaysDrawVerticalTrack="true"
             android:id="@+id/tab_editor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_title"
                style="@android:style/TextAppearance.Material.Widget.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@+id/title_edit_box"
                android:text="@string/EDITOR_FRAG_DATE"
                />

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/title_edit_box"
                style="@android:style/TextAppearance.Material.Widget.TextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:maxLines="1"
                android:minLines="1"
                app:bootstrapBrand="success"
                app:roundedCorners="true"
                />

            <TextView
                android:id="@+id/fact_title"
                style="@android:style/TextAppearance.Material.Widget.TextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@+id/fact_body"
                android:text="@string/EDITOR_FRAG_FACT"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/fact_body"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:minLines="2"
                android:scrollbars="vertical"
                app:bootstrapBrand="success"
                app:roundedCorners="true"
                />

            <TextView
                android:id="@+id/knowledge_title"
                style="@android:style/TextAppearance.Material.Widget.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@+id/knowledge_body"
                android:text="@string/EDITOR_FRAG_DISCOVERY"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/knowledge_body"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:allowUndo="true"
                android:minLines="2"
                android:scrollbars="vertical"
                app:bootstrapBrand="success"
                app:roundedCorners="true"

                />

            <TextView
                android:id="@+id/realization_title"
                style="@android:style/TextAppearance.Material.Widget.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@+id/realization_body"
                android:text="@string/EDITOR_FRAG_NOTIFICATION"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/realization_body"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:allowUndo="true"
                android:minLines="2"
                android:scrollbars="vertical"
                app:bootstrapBrand="success"
                app:roundedCorners="true"
                />


            <TextView
                android:id="@+id/theme_title"
                style="@android:style/TextAppearance.Material.Widget.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@+id/theme_body"
                android:text="@string/EDITOR_FRAG_GOAL"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/theme_body"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:allowUndo="true"
                android:minLines="2"
                android:scrollbars="vertical"
                app:bootstrapBrand="success"
                app:roundedCorners="true"

                />


            <TextView
                android:id="@+id/rate_title"
                style="@android:style/TextAppearance.Material.Widget.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@+id/rate_bar"
                android:text="@string/EDITOR_FRAG_EVALUATION"/>

            <RatingBar
                android:id="@+id/rate_bar"
                style="@style/Widget.AppCompat.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="2"
                android:clickable="true"
                android:isIndicator="false"
                android:maxHeight="50dip"
                android:minHeight="50dip"
                android:nestedScrollingEnabled="false"
                android:numStars="6"
                android:rating="1.0"
                android:stepSize="1"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/diary_clear_button"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/EDITOR_CLEAR_BUTTON_TEXT"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"/>
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
